2007-10-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, itpp/base/Makefile.am: Fixed linking problem with
	zdotu_ when not using BLAS

	If an external BLAS library is not used, do not compile and link
	the zdotusub_ Fortran wrapper, since it requires an external
	zdotu_ function to exist.

==============================================================================

2007-09-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 4.0.0-rc1 released (SVN tag: release-4-0-0-rc1)

	* NEWS: Updated to reflect recent changes

	* tests/itfile_test.cpp: Fixed a minor bug in itfile_test program

	This test program opened the reference data file from source
	directory in read/write mode, which was wrong, because source
	directory can be located on read-only file system. This patch
	fixes this bug.

2007-09-27  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/modulator_nd_test.cpp, tests/modulator_nd_test.ref: Test
	program updated to use ZF Log-MAP demodulation method

2007-09-26  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/modulator_nd.cpp, itpp/comm/modulator_nd.h:
	Implemented Zero-Forcing (ZF) Log-MAP soft demodulation method

	Zero-Forcing approximate demodulation method can be used instead
	of a brute-force optimum enumeration of all constellation points
	in both real- and complex-valued MIMO demodulators. Thanks to Erik
	G. Larsson, who provided the draft implementation and reviewed the
	code.

2007-09-07  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/modulator_nd.cpp, itpp/comm/modulator_nd.h,
	tests/modulator_nd_test.cpp: Interface improvements in
	Modulator_ND classes

	The interfaces of Modulator_ND class and its descendants were
	redesigned to be more similar to 1D and 2D modulators' interfaces.
	BTW, revised the documentation and performed a set of cosmetic
	changes.

2007-09-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/channel.h: Documentation improvements in AWGN_Channel
